--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sketchy_coins
-description: A sample command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
+description: A Blockchain transaction server.
+version: 0.0.1
+homepage: https://www.example.com
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -10,6 +10,8 @@ dependencies:
   crypto: ^3.0.1
   hex: ^0.2.0
   uuid: ^3.0.3
+  args: ^1.6.0
+  shelf_router: ^1.0.0
 
 dev_dependencies:
   pedantic: ^1.9.0
