--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   uuid: ^3.0.3
   args: ^1.6.0
   shelf_router: ^1.0.0
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
+  build_runner: ^1.12.2
+  json_serializable: ^4.1.0
