--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   args: ^2.0.0
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
+  timeago: ^3.0.2
 
 dev_dependencies:
   pedantic: ^1.9.0
