--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,12 @@ dependencies:
   crypto: ^3.0.1
   hex: ^0.2.0
   uuid: ^3.0.3
-  args: ^2.0.0
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
   timeago: ^3.0.2
 
 dev_dependencies:
-  pedantic: ^1.9.0
   test: ^1.14.4
   build_runner: ^1.12.2
   json_serializable: ^4.1.0
+  build_web_compilers: ^2.16.5
