--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
   timeago: ^3.0.2
+  hive: ^2.0.2
+  hive_generator: ^1.0.1
 
 dev_dependencies:
   test: ^1.14.4
