--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,12 @@ dependencies:
   timeago: ^3.0.2
   hive: ^2.0.2
   hive_generator: ^1.0.1
+  buffer: ^1.1.1
+  meta: ^1.3.0
 
 dev_dependencies:
   test: ^1.14.4
   build_runner: ^1.12.2
   json_serializable: ^4.1.0
   build_web_compilers: ^2.16.5
+  isar_generator: 0.2.0
