--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ kkoin/blockchain.hive
 kkoin/blockchain.lock
 kkoin/transactions.hive
 kkoin/transactions.lock
+kkoin_test/transactions.hive
+kkoin_test/blockchain.hive
+kkoin_test/accounts.hive
+*.hive
+kkoin_test/accounts.lock
+kkoin_test/blockchain.lock
+kkoin_test/transactions.lock
+kkoin/accounts.lock
+*.hive
+kkoin_test/accounts.hive
