--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain transaction server.
-version: 0.0.3
+version: 0.0.4
 homepage: https://www.example.com
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
   timeago: ^3.0.2
+  jaguar_jwt: ^3.0.0
   hive: ^2.0.2
   hive_generator: ^1.0.1
 
