--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
   uuid: ^3.0.3
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
-  timeago: ^3.0.2
   jaguar_jwt: ^3.0.0
   hive: ^2.0.2
   hive_generator: ^1.0.1
+  dotenv: ^2.0.0
 
 dev_dependencies:
   test: ^1.14.4
