--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain transaction server.
-version: 0.0.4
+version: 0.0.6
 homepage: https://www.example.com
 
 environment:
@@ -12,13 +12,14 @@ dependencies:
   uuid: ^3.0.3
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
-  jaguar_jwt: ^3.0.0
   hive: ^2.0.2
   hive_generator: ^1.0.1
-  dotenv: ^2.0.0
+  dotenv: ^3.0.0-nullsafety.0
+  envify: ^2.0.0
 
 dev_dependencies:
   test: ^1.14.4
   build_runner: ^1.12.2
   json_serializable: ^4.1.0
-  build_web_compilers: ^2.16.5
+  build_web_compilers: ^2.12.2
+  envify_generator: ^2.0.0
