--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sketchy_coins
-description: A Blockchain transaction server.
+description: A Blockchain Transaction Server.
 version: 0.0.6
 homepage: https://www.example.com
 
