--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.0.6
+version: 0.0.7
 homepage: https://www.example.com
 
 environment:
@@ -16,6 +16,7 @@ dependencies:
   hive_generator: ^1.0.1
   dotenv: ^3.0.0-nullsafety.0
   envify: ^2.0.0
+  dart_jsonwebtoken: ^2.1.0
 
 dev_dependencies:
   test: ^1.14.4
