--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.1.0
+version: 0.1.1
 homepage: https://www.example.com
 
 environment:
@@ -16,9 +16,12 @@ dependencies:
   hive_generator: ^1.0.1
   dotenv: ^3.0.0-nullsafety.0
   envify: ^2.0.0
+  redis_dart: ^0.1.0+3
   dart_jsonwebtoken: ^2.1.0
+  geodesy: ^0.4.0-nullsafety.0
 
 dev_dependencies:
+  pedantic: ^1.11.0
   test: ^1.14.4
   build_runner: ^1.12.2
   json_serializable: ^4.1.0
