--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.1.2
+version: 0.1.3
 homepage: https://www.example.com
 
 environment:
@@ -18,6 +18,7 @@ dependencies:
   envify: ^2.0.0
   redis_dart: ^0.1.0+3
   dart_jsonwebtoken: ^2.1.0
+  validators: ^3.0.0
   geodesy: ^0.4.0-nullsafety.0
 
 dev_dependencies:
