--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.1.3
+version: 0.1.4
 homepage: https://www.example.com
 
 environment:
@@ -16,9 +16,12 @@ dependencies:
   hive_generator: ^1.0.1
   dotenv: ^3.0.0-nullsafety.0
   envify: ^2.0.0
-  redis_dart: ^0.1.0+3
+  redis_dart: ^0.1.0+4
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
+  cryptography: ^2.0.1
+  shelf_web_socket: ^1.0.1
+  hive_crdt: ^1.0.3
   geodesy: ^0.4.0-nullsafety.0
 
 dev_dependencies:
