--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.1.5
+version: 0.1.6
 homepage: https://www.example.com
 
 environment:
@@ -14,14 +14,13 @@ dependencies:
   json_annotation: ^4.0.1
   hive: ^2.0.2
   hive_generator: ^1.0.1
-  dotenv: ^3.0.0-nullsafety.0
   redis_dart: ^0.1.0+4
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
-  cryptography: ^2.0.1
   shelf_web_socket: ^1.0.1
   crdt: ^4.0.1
   geodesy: ^0.4.0-nullsafety.0
+  steel_crypt: ^3.0.0+1
 
 dev_dependencies:
   pedantic: ^1.11.0
