--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sketchy_coins
 description: A Blockchain Transaction Server.
-version: 0.2.2
+version: 0.3.0
 homepage: https://www.example.com
 
 environment:
@@ -18,9 +18,9 @@ dependencies:
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
   shelf_web_socket: ^1.0.1
-  crdt: ^4.0.1
+  cron: ^0.3.0
   postgrest: ^0.1.0
-  geodesy: ^0.4.0-nullsafety.0
+  shelf_hotreload: ^0.0.2
   steel_crypt: ^3.0.0+1
 
 dev_dependencies:
