--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shelf_web_socket: ^1.0.1
   cron: ^0.3.0
   postgrest: ^0.1.0
+  session_jar: ^0.0.4
   shelf_hotreload: ^0.0.2
   steel_crypt: ^3.0.0+1
   supabase: ^0.0.1-dev.14
