--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,8 @@ dependencies:
   redis_dart: ^0.1.0+4
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
-  shelf_web_socket: ^1.0.1
-  cron: ^0.3.0
   postgrest: ^0.1.0
-  session_jar: ^0.0.4
-  shelf_hotreload: ^0.0.2
-  steel_crypt: ^3.0.0+1
+  mailer: ^5.0.0
   supabase: ^0.0.1-dev.14
 
 dev_dependencies:
