--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,13 @@ dependencies:
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
   postgrest: ^0.1.0
-  mailer: ^5.0.0
+  timeago: ^3.0.2
   supabase: ^0.0.1-dev.14
 
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.14.4
-  build_runner: ^1.12.2
+  build_runner: ^2.0.2
   json_serializable: ^4.1.0
-  build_web_compilers: ^2.12.2
+  build_web_compilers: ^3.0.0
   envify_generator: ^2.0.0
