--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.14.4
-  build_runner: ^2.0.0
+  build_runner: 2.0.0
   json_serializable: ^4.1.0
-  build_web_compilers: ^3.0.0
+  build_web_compilers: 3.0.0
   envify_generator: ^2.0.0
