--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,19 @@ dependencies:
   shelf_router: ^1.0.0
   json_annotation: ^4.0.1
   hive: ^2.0.2
+  hive_crdt: ^1.1.0
   hive_generator: ^1.0.1
   redis_dart: ^0.1.0+4
   dart_jsonwebtoken: ^2.1.0
   validators: ^3.0.0
+  geodesy: ^0.4.0-nullsafety.0
   postgrest: ^0.1.0
   timeago: ^3.0.2
+  sentry: ^5.0.0
   supabase: ^0.0.1-dev.14
   dotenv: ^3.0.0-nullsafety.0
+  calc: ^0.2.1
+  realtime_client: ^0.0.8
 
 dev_dependencies:
   pedantic: ^1.11.0
